processed/jira/txt/LU/LU-9803.txt
Key:        LU-9803
Summary:    Need to cast st_blksize to unsigned long for printf in directio.c
Link:       https://jira.whamcloud.com/browse/LU-9803
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Chris Horn
Reporter:   Chris Horn
Created:    Thu, 27 Jul 2017 20:07:05 +0000
Updated:    Mon, 28 Aug 2017 18:16:04 +0000
Resolved:   Mon, 28 Aug 2017 18:16:04 +0000

--- Description ---
Had a compilation fail due:

directio.c: In function 'main':
directio.c:114:16: error: format '%lu' expects argument of type 'long unsigned int', but argument 4 has type '__blksize_t' [-Werror=format=]
                st.st_blksize);
                ^

This is the code

        printf("directio on %s for %dx%lu bytes \n", fname, blocks,
               st.st_blksize);

Think we can get by with just casting that st_blksize to an unsigned long. I'll push a patch

--- Comment (mdiep, Mon, 28 Aug 2017 18:16:04 +0000) ---
Landed in 2.11

--- Comment (gerrit, Mon, 28 Aug 2017 06:26:41 +0000) ---
Oleg Drokin (oleg.drokin@intel.com) merged in patch https://review.whamcloud.com/28262/

Subject: LU-9803 tests: cast st_blksize for printf

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 8784406f98dd4ddd98cec9cd728b70b22de3d1bf

--- Comment (gerrit, Thu, 27 Jul 2017 20:15:05 +0000) ---
Chris Horn (hornc@cray.com) uploaded a new patch: https://review.whamcloud.com/28262

Subject: LU-9803 tests: cast st_blksize for printf

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: fbfd5c8f2c242b5befc40d88b29b7dbf4700e395
